--- a/src/components/CalendarHeatmap/CalendarHeatmap.css
+++ b/src/components/CalendarHeatmap/CalendarHeatmap.css
@@ -1,36 +1,9 @@
 /* Styles for the toggle buttons */
-.cal-toggle-button {
-  padding: 7px 7px;
-  border-radius: 5rem;
-  font-size: 16px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background-color 0.3s ease, color 0.3s ease;
-  gap: 10px;
-}
 
-.cal-toggle-button.active {
-  background-color: #BA5370;
-  color: white;
-}
-
-.cal-toggle-button.inactive {
-  background-color: #e5e7eb;
-  color: #374151;
-  opacity: 0.7;
-}
-
-.cal-toggle-button.inactive:hover {
-  background-color: #d1d5db;
-}
-
-.cal-toggle-button:not(:last-child) {
-  margin-right: 0.5rem;
-}
 .justify-center {
   display: flex;
   justify-content: center;
-  margin-bottom: 1rem;;
+  margin-bottom: 0.7rem;
 }
 
 .day {
@@ -39,59 +12,45 @@
 
 .tooltip {
   position: absolute;
-  padding: 5px;
+  padding: 3px 6px;
   background: white;
   border: 1px solid #ccc;
-  font-size: 12px;
+  font-size: 10px;
   pointer-events: none;
   z-index: 100;
 }
 
 .cal-container {
-  padding: 1rem;
+  padding: 0.6rem;
   background-color: #F8F8F8;
-  border-radius: 10px;
-  max-width: 680px;
-  margin-top: 3rem;
-  /* margin-left: 3rem; */
-  /* max-width: */
-  height: auto;
+  border-radius: 0.7rem;
+  width: 100%;
+  max-width: 540px;
+  margin-top: 0.8rem;
+  height: 100%;
   position: relative;
   overflow: visible;
   box-sizing: border-box;
+  margin-right: 1rem;
 }
 
 .chart-cal {
-  width: 100%;
-  height: 420px;
-}
-
-.travel-mode-tooltip {
-  position: absolute;
-  background-color: #F8F8F8;
-  border: 1px solid #ddd;
-  padding: 6px 12px;
-  font-size: 12px;
-  pointer-events: none;
-  opacity: 0;
-  transition: opacity 0.2s;
-  border-radius: 4px;
-  z-index: 9999;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  width: 490px;
+  height: 270px;
 }
 
 .legend {
-  font-size: 13px;
+  font-size: 11px;
 }
 
 .bar:hover {
-  opacity: 0.8;
+  opacity: 0.75;
 }
 
 /* Media query for smaller devices */
 @media screen and (max-width: 768px) {
   .cal-container {
-    padding: 1rem;
+    padding: 0.5rem;
     max-width: 100%;
   }
 
@@ -99,12 +58,7 @@
     height: 250px;
   }
 
-  .cal-toggle-button {
-    padding: 8px 14px;
-    font-size: 14px;
-  }
-
   .legend {
-    font-size: 11px;
+    font-size: 9px;
   }
 }
