--- a/src/components/CalendarHeatmap/DaysHeatmap.css
+++ b/src/components/CalendarHeatmap/DaysHeatmap.css
@@ -48,22 +48,22 @@
 }
 
 .days-container {
-  padding: 1rem;
+  padding: 0.6rem;
   background-color: #F8F8F8;
-  border-radius: 10px;
-  width: 680px;
-  margin-top: 3rem;
-  /* margin-left: 3rem; */
-  /* max-width: */
-  height: auto;
+  border-radius: 0.7rem;
+  width: 100%;
+  max-width: 540px;
+  margin-top: 0.8rem;
+  height: 100%;
   position: relative;
   overflow: visible;
   box-sizing: border-box;
+  padding-left: 1rem;
 }
 
 .chart-days {
-  width: 100%;
-  height: 420px;
+  width: 490px;
+  height: 270px;
 }
 
 .travel-mode-tooltip {
