--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -50,7 +50,7 @@
 .radialBar > span {
   font-size: 20px;
   font-weight: bold;
-  line-height: 20px;
+  line-height: 1.5rem;
 }
 
 /* Big Number Display */
@@ -59,17 +59,17 @@
   align-items: center;
   justify-content: center;
   gap: 15px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 
 .bigNumber {
-  font-size: 24px;
+  font-size: 16px;
   font-weight: bold;
   color: #fff;
 }
 
 .percent {
-  font-size: 24px;
+  font-size: 14px;
   font-weight: bold;
   color: #fff;
 }
@@ -90,12 +90,12 @@
 }
 
 .valueText {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: bold;
 }
 
 .yearText {
-  font-size: 0.6rem;
+  font-size: 10px;
   opacity: 0.8;
 }
 
@@ -104,7 +104,7 @@
   font-weight: bold;
 }
 .detail > span:nth-child(3) {
-  font-size: 2em;
+  font-size: 1.3em;
 }
 
 /* ExpandedCard */
