--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,10 +1,13 @@
 .Cards {
   display: flex;
-  width: 95%;
+  /* width: 240px; */
   gap: 15px;
 }
 .parentContainer{
-  width: 100%;
+  width: 15rem;
+}
+.parentContainer:nth-of-type(4) {
+  width: 19rem;
 }
 
 @media screen and (max-width: 1200px) {
