--- a/src/components/Hotspots/Hotspots.css
+++ b/src/components/Hotspots/Hotspots.css
@@ -12,9 +12,9 @@
     flex-direction: row;
     justify-content: space-evenly;
     /* align-items: center; */
-    width: 100%;
+    width: 40rem;
     /* height: 100%; */
-    position: relative; 
+    /* position: relative;  */
 }
 
 
@@ -23,7 +23,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     /* align-items: center; */
-    width: 100%;
+    width: 80%;
     /* height: 100%; */
     position: relative; 
 }
