--- a/src/components/RigtSide/RightSide.css
+++ b/src/components/RigtSide/RightSide.css
@@ -3,7 +3,9 @@
     flex-direction: column;
     padding-top: 7rem;
     width: 100%;
-    justify-content: top;
+    height: calc(100vh - 10rem);
+    overflow: hidden;
+    justify-content: space-evenly;
     align-items: left;
     gap: 1rem;
 }
